--- a/src/styles.css
+++ b/src/styles.css
@@ -17,4 +17,15 @@ h1{
     display: flex;
     justify-content: center;
 }
+.categoria{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+    border: 1px solid black;
+}
+.done{
+    
+}
 
