--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,99 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <h1>TODO-APP</h1>
-  <div class="cadastro">
-    <input placeholder="Nome" [(ngModel)]='Tarefas.nome'>
-    <input placeholder="Descrição" [(ngModel)]='Tarefas.descricao'>
-    <select name="selecionar" [(ngModel)]='Tarefas.categoria'>
-      <option value="TODO">TODO </option>
-      <option value="DOING">DOING</option>
-      <option value="DONE">DONE</option>
-    </select>
-
-    <button (click)="cadastrarUsuario()" style="background-color: aqua ;"> Cadastrar</button>
-
-  </div>
-
-  <div>
-    <div class="categoria" >
-      <div class="todo" (change)="mudar()">
-        <h1>TODO</h1>
-        <div *ngFor="let trf of trfs, index as indice;">
-          <div *ngIf="trf.categoria === 'TODO'">
-            <h4>
-              {{trf.id}}
-              Tarefa: {{trf.nome}}
-              <br>
-              Descrição: {{trf.descricao}}
-              <br>
-              categoria: {{trf.categoria}}
-              <br>
-              <select name="selecionar" [(ngModel)]='trf.categoria'>
-                <option value="TODO">TODO </option>
-                <option value="DOING">DOING</option>
-                <option value="DONE">DONE</option>
-              </select>
-            </h4>
-            <button (click)="removerTarefa(indice)">remover</button>
-          </div>
-        </div>
-      </div>
-      <div class="doing" (change)="mudar()">
-        <h1>DOING</h1>
-        <div *ngFor="let trf of trfs, index as indice;">
-          <div *ngIf="trf.categoria === 'DOING'">
-            <h4>
-              {{trf.id}}
-              Tarefa: {{trf.nome}}
-              <br>
-              Descrição: {{trf.descricao}}
-              <br>
-              categoria: {{trf.categoria}}
-              <br>
-              <select name="selecionar" [(ngModel)]='trf.categoria'>
-                <option value="TODO">TODO </option>
-                <option value="DOING">DOING</option>
-                <option value="DONE">DONE</option>
-              </select>
-            </h4>
-            <button (click)="removerTarefa(indice)">remover</button>
-          </div>
-        </div>
-      </div>
-      <div class="done" (change)="mudar()">
-        <h1>DONE</h1>
-        <div *ngFor="let trf of trfs, index as indice;">
-          <div *ngIf="trf.categoria === 'DONE'">
-            <h4>
-              {{trf.id}}
-              Tarefa: {{trf.nome}}
-              <br>
-              Descrição: {{trf.descricao}}
-              <br>
-              categoria: {{trf.categoria}}
-              <br>
-              <select name="selecionar" [(ngModel)]='trf.categoria'>
-                <option value="TODO">TODO </option>
-                <option value="DOING">DOING</option>
-                <option value="DONE">DONE</option>
-              </select>
-            </h4>
-            <button (click)="removerTarefa(indice)">remover</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-
-</html>
+<router-outlet></router-outlet>
