--- a/src/app/categoria/categoria.component.html
+++ b/src/app/categoria/categoria.component.html
@@ -9,11 +9,11 @@
     
 </head>
 <body> 
-    <button style="background-color: aqua;"><a routerLink="/todo">Cadastrar Tarefas</a></button>
+    <button  style="background-color: antiquewhite;"><a routerLink="/todo">Cadastrar Tarefas</a></button>
     <div class="cadastro">
         <h1>Cadastrar Categorias</h1>
-        <input placeholder="Nome" [(ngModel)]='categorias.nome'>
-        <button (click)="cadastrarCategoria()" style="background-color: aqua ;">Cadastrar</button>
+        <input  placeholder="Nome" [(ngModel)]='categorias.nome'>
+        <button  (click)="cadastrarCategoria()" style="background-color: antiquewhite ;">Cadastrar</button>
       </div>
       <h1>Categorias</h1>
       <div class="categoria" >
