--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -11,26 +11,30 @@
 </head>
 
 <body>
-  <button  style="background-color: aqua;"><a routerLink="/categoria">Cadastrar Categorias</a></button>
-  <h1>TODO-APP</h1>
+  <header>
+    <button  style="background-color: antiquewhite;"><a routerLink="/categoria">Cadastrar Categorias</a></button>
+    <div class="head-todo">
+    <h1 class="head">TODO-APP</h1>
+  </div>
+  </header>
   <div class="cadastro">
-    <input placeholder="Nome" [(ngModel)]='Tarefas.nome'>
-    <input placeholder="Descrição" [(ngModel)]='Tarefas.descricao'>
-    <select name="selecionar" [(ngModel)]='Tarefas.categoria'>
-      <option *ngFor="let ctg of ctgs; index as indice"> </option>
+    <input  placeholder="Nome" [(ngModel)]='Tarefas.nome'>
+    <input  placeholder="Descrição" [(ngModel)]='Tarefas.descricao'>
+    <select name="selecionar" [(ngModel)]='Tarefas.categoria' style="border-radius: 10px;">
+      <option *ngFor="let ctg of ctgs; index as indice"> {{ctg.nome}}</option>
       
     </select>
 
-    <button (click)="cadastrarUsuario()" style="background-color: aqua ;"> Cadastrar</button>
+    <button (click)="cadastrar()" style="background-color: antiquewhite ;"> Cadastrar</button>
 
   </div>
 
   <div>
     <div class="categoria" >
-      <div class="todo" (change)="mudar()">
-        <h1>TODO</h1>
-        <div *ngFor="let trf of trfs, index as indice;">
-          <div *ngIf="trf.categoria === 'TODO'">
+      <div class="todo" (change)="mudar()" *ngFor="let ctg of ctgs;">
+        <h1>{{ctg.nome}}</h1>
+        <div *ngFor="let trf of trfs;" >
+          <div *ngIf="trf.categoria === ctg.nome, index as indice">
             <h4>
               {{trf.id}}
               Tarefa: {{trf.nome}}
@@ -39,10 +43,8 @@
               <br>
               categoria: {{trf.categoria}}
               <br>
-              <select name="selecionar" [(ngModel)]='ctg.categoria'>
-                <option value="TODO">TODO </option>
-                <option value="DOING">DOING</option>
-                <option value="DONE">DONE</option>
+              <select name="selecionar" [(ngModel)]='trf.categoria'style="border-radius: 10px;">
+                <option *ngFor="let ctg of ctgs; index as indice"> {{ctg.nome}}</option>
               </select>
             </h4>
             <button (click)="removerTarefa(indice)">remover</button>
