--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.cdnfonts.com/css/lovelo?styles=25962');
 
 html{
-    background-color: pink ;
-
+    background-color: rgb(75, 75, 75) ;
+    color: white ;
 }
 .cadastro{
     display: flex;
