--- a/src/app/cadastro-usuario/cadastro.component.html
+++ b/src/app/cadastro-usuario/cadastro.component.html
@@ -7,7 +7,7 @@
     <title>cstro</title>
 </head>
 <header>
-   <button id="Logar"><a routerLink="/login">Login</a></button> 
+   <a class="Logar" routerLink="/login">Login</a>
    <h2 id="h2Todo">TODO-APP</h2>
 </header>
 <body>
