--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-<html>
-<header class="header">
+<header>
     <div>
-        <a class="router" routerLink="/cadastro">Cadastrar</a> 
+        <a routerLink="/cadastro">Cadastrar</a> 
         <h2 id="h2Todo">TODO-APP</h2>
     </div>
+
 </header>
 <body>
 
@@ -22,4 +22,3 @@
     </div>
 </section>
 </body>
-</html>
