--- a/src/app/cadastro-usuario/cadastro.component.html
+++ b/src/app/cadastro-usuario/cadastro.component.html
@@ -7,7 +7,7 @@
     <title>cstro</title>
 </head>
 <header>
-   <a class="Logar" routerLink="/login">Login</a>
+   <button id="Logar"><a routerLink="/login">Login</a></button> 
    <h2 id="h2Todo">TODO-APP</h2>
 </header>
 <body>
@@ -24,7 +24,7 @@
         
     </div>
     <div id="entrar">
-        <button  (click)="cadastrarUsuario()" style="background-color: antiquewhite ;">Cadastrar</button>
+        <button   (click)="cadastrarUsuario()" style="background-color: antiquewhite ;">Cadastrar</button>
     </div>
 </div>
 </section>
