--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,7 +2,6 @@ body{
     padding: 0;
     margin:0;
     width: 100%;
-    
 }
 #cadastro{
     background-color: rgb(252, 252, 252);
@@ -42,7 +41,6 @@ h3{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: 'Times New Roman', Times, serif;
     
 }
 #titulo{
@@ -67,7 +65,6 @@ h3{
     justify-content: center;
     font-family: 'Lovelo', sans-serif;
     font-size: 40px;
-    
   
 }
 
@@ -79,12 +76,11 @@ button{
     font-size: medium;
 }
 
-.router{
+a{
     text-decoration: none;
     color: white;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Lovelo', sans-serif;
 }
-
 
 input{
     font-weight: bold;
@@ -97,5 +93,7 @@ input::placeholder{
     color: black;
 }
 
-
-
+header{
+    background-color: black;
+    padding: 0 20;
+}
