--- a/src/app/cadastro-usuario/cadastro.component.html
+++ b/src/app/cadastro-usuario/cadastro.component.html
@@ -7,7 +7,6 @@
     <title>cstro</title>
 </head>
 <header>
-   <button id="Logar"><a routerLink="/login">Login</a></button> 
    <h2 id="h2Todo">TODO-APP</h2>
 </header>
 <body>
@@ -25,6 +24,9 @@
     </div>
     <div id="entrar">
         <button   (click)="cadastrarUsuario()" style="background-color: antiquewhite ;">Cadastrar</button>
+        <div class="link">
+            <p>Já faz parte de nosso grupo?<a routerLink="/login">Entre</a> </p>
+        </div>
     </div>
 </div>
 </section>
