--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <header>
     <div>
-        <a routerLink="/cadastro">Cadastrar</a> 
+        
         <h2 id="h2Todo">TODO-APP</h2>
     </div>
 
@@ -18,6 +18,9 @@
             </div>
             <div class="login">
                 <button class="loginButton" (click)="login()">Entrar</button>
+                <div class="link">
+                    <p>Não possui conta?<a routerLink="/cadastro">Cadastre-se</a> </p>
+                 </div>
             </div>
     </div>
 </section>
